# RustPipe

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  nextflow.config
benches/: pipeline_bench.rs
modules/local/rustpipe/: environment.yml  main.nf  meta.yml
src/: convert.rs  de.rs  enrich.rs  filter.rs  hvg.rs  io.rs  main.rs  normalize.rs  pca.rs  pipeline.rs  stats.rs
tests/: integration.rs
tests/data/: counts_test.tsv  samplesheet_test.csv
workflows/: rustpipe.nf
