[package]
name = "rustpipe"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Prairie Bio <hello@prairiebio.com>"]
description = "Fast downstream RNA-seq analysis in Rust. The companion to RustQC."
license = "GPL-3.0-only"
repository = "https://github.com/prairiebio/rustpipe"
readme = "README.md"
keywords = ["bioinformatics", "rna-seq", "parquet", "differential-expression", "genomics"]
categories = ["science", "command-line-utilities"]

[dependencies]
# Arrow / Parquet I/O
arrow = { version = "53", features = ["prettyprint"] }
parquet = { version = "53", features = ["zstd", "snap"] }

# DataFrame (lazy eval, streaming)
polars = { version = "0.43", features = ["lazy", "parquet", "csv", "streaming", "dtype-struct"] }

# Parallelism
rayon = "1.10"

# Math / Stats
ndarray = { version = "0.16", features = ["rayon"] }
statrs = "0.17"
rand = "0.8"
rand_distr = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Allocator
mimalloc = "0.1"

# Logging
log = "0.4"
env_logger = "0.11"

# Compression
flate2 = "1"

# Error handling
anyhow = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"
tempfile = "3"
assert_cmd = "2"
polars = { version = "0.43", features = ["lazy", "parquet", "csv", "dtype-struct"] }

[[bench]]
name = "pipeline_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = 3
